--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.10
-loader_version=0.17.3
+minecraft_version=1.21.11
+loader_version=0.18.2
+loom_version=1.14-SNAPSHOT
 # Mod Properties
-mod_version=1.21.10-1.22.0
+mod_version=1.21.11-1.22.0
 maven_group=tgw.wolf_tweaks
 archives_base_name=WolfTweaks
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.138.0+1.21.10
+fabric_version=0.140.2+1.21.11
